<resources>
    <string name="app_name">Little Whale</string>
    <string name="title_activity_edit_locations">Locations</string>

    <string-array name="longitude">
        <item>E</item>
        <item>W</item>
    </string-array>

    <string-array name="latitude">
        <item>N</item>
        <item>S</item>
    </string-array>
    <string name="title_activity_navigation">Navigation</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="windDirIcon"></string>
    <string name="cloudsIcon"></string>
    <string name="temperatureIcon"></string>
    <string name="windSpeedIcon"></string>
    <string name="humidityIcon"></string>
    <string name="pressureIcon"></string>
    <string name="valueNotAvailable"></string>
    <string name="weatherLoadingFailedText">Could not load weather :(</string>
    <string name="weatherCheckNetworkConnText">Check your network connection and try again later.</string>
    <string name="weatherServerReturnText">Our weather provider returned:</string>


    <integer-array name="weatherid">
        <item>800</item>
        <item>8</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>0</item>
    </integer-array>

    <string-array name="weathericoncode" translatable="false">
        <item name="sunny">&#xf00d;</item>
        <item name="cloudy">&#xf013;</item>
        <item name="thunder">&#xf01e;</item>
        <item name="drizzle">&#xf01c;</item>
        <item name="rainy">&#xf019;</item>
        <item name="snowy">&#xf01b;</item>
        <item name="foggy">&#xf014;</item>
        <item name="clearnight">&#xf02e;</item>
    </string-array>
    <string name="title_activity_about">About</string>
    <string name="app_version_name">2.0</string>
    <string name="author">Authors</string>
    <string name="version_str">Version</string>
    <string name="author1">Clemens Hofer</string>
    <string name="author2">Andrea Maria Pferscher</string>
    <string name="author3">Angela Promitzer</string>
    <string name="author4">Gerald Palfinger</string>
    <string name="guideIntro">Arrrrr!</string>
    <string name="guideText">Here is our new App - „Little Whale“. With this app you can navigate your battleships through the seven seas and board the ships of helpless tourist boats! Haaa Haaa Haaa Haaaa….</string>
    <string name="na_string">N/A</string>


</resources>
